--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.2.0",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
